minor style changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
       </div>
       <div id="admin">
         <ul id="nav_list">
+          <li>Administrator</li>
           <li><%= link_to "Galleries", galleries_path %></li>
         </ul>
       </div>
