--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Recently added galleries:</h1>
+<ul>
+  <% for gallery in Gallery.find(:all, :order => :updated_at) %>
+  <li><%= link_to gallery.title, gallery %>:
+    <%= gallery.photos.count %> photos
+    updated <%= gallery.updated_at.to_s(:rfc822) %></li>
+  <% end %>
+</ul>
