--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <li>Contact</li>
         </ul>
       </div>
-      <div id="admin">
+      <div class="admin">
         <ul id="nav_list">
           <li>Administrator</li>
           <li><%= link_to "Galleries", galleries_path %></li>
