--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Recently added galleries:</h1>
 <ul>
-  <% for gallery in Gallery.find(:all, :order => :updated_at) %>
+  <% for gallery in Gallery.find(:all, :order => :updated_at, :limit => 10) %>
   <li><%= link_to gallery.title, gallery %>:
     <%= gallery.photos.count %> photos
     updated <%= gallery.updated_at.to_s(:rfc822) %></li>
