--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -10,8 +10,8 @@
   <%=h @gallery.title %>
 </p>
 <p>
-  <strong>Name:</strong>
-  <%=h @photo.name %>
+  <strong>Tags:</strong>
+  <%=h @photo.tags %>
 </p>
 <p>
   <strong>Rating:</strong>
