--- a/app/views/galleries/_grid.html.erb
+++ b/app/views/galleries/_grid.html.erb
@@ -7,6 +7,7 @@
     </div>
     <p class="details">
       <%=h photo.name %> - Rating: <%=h photo.rating %><br />
+      Tags: <%=h photo.tags.join(',') %>
     </p>
     <p class="admin">
       <%= link_to "Edit", edit_gallery_photo_path(@gallery, photo) %> |
