fixed tagging from forms

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 <p>
   <strong>Tags:</strong>
-  <%=h @photo.tags %>
+  <%=h @photo.tags.join(', ') %>
 </p>
 <p>
   <strong>Rating:</strong>
