added routing to categories; categories can be filled with selected images; category navigation is now functional

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,3 @@
-<% title "Category" %>
+<% title @category.name.humanize %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<p>
-  <%= link_to "Edit", edit_category_path(@category) %> |
-  <%= link_to "Destroy", @category, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", categories_path %>
-</p>
+<%= render :partial => 'grid' %>
