--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag 'moments' %>
     <%= stylesheet_link_tag 'image_gallery' %>
     <%= stylesheet_link_tag 'lightbox' %>
-    <%= javascript_include_tag :all %>
+    <%= javascript_include_tag :defaults %>
     <%= yield(:head) %>
   </head>
   <body>
