changed '_grid' to more appropriately descriptive '_photos' in various locations; fixed nav bar links so they all link from root, rather than the current page

--- a/app/views/galleries/_photos.html.erb
+++ b/app/views/galleries/_photos.html.erb
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="photos">
   <% for photo in @photos %>
   <div class="cell">
     <div class="photo <%= photo.orientation %>">
