--- a/app/views/categories/_photos.html.erb
+++ b/app/views/categories/_photos.html.erb
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="photos">
   <% unless @category.name == 'theatre' %>
     <% for photo in @photos %>
     <div class="cell">
