changed .photos to #photos since that section should only show up once on a page

--- a/app/views/categories/_photos.html.erb
+++ b/app/views/categories/_photos.html.erb
@@ -1,4 +1,4 @@
-<div class="photos">
+<div id="photos">
   <% unless @category.name == 'theatre' %>
     <% for photo in @photos %>
     <div class="cell">
