--- a/app/views/galleries/_photos.html.erb
+++ b/app/views/galleries/_photos.html.erb
@@ -1,4 +1,4 @@
-<div class="photos">
+<div id="photos">
   <% for photo in @photos %>
   <div class="cell">
     <div class="photo <%= photo.orientation %>">
