--- a/public/stylesheets/image_gallery.css
+++ b/public/stylesheets/image_gallery.css
@@ -1,9 +1,9 @@
-.photos {
+#photos {
   margin-top: 30px;
   text-align: center;
 }
 
-.photos .cell {
+#photos .cell {
   border: none;
   width: 150px;
   padding:auto;
@@ -12,7 +12,7 @@
   float: left;
 }
 
-.photos .cell .photo {
+#photos .cell .photo {
   height: 150px;
   width: 150px;
   margin: auto;
