--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -1,5 +1,5 @@
 #photos
-  - for photo in @gallery.photos
+  - for photo in @photos
     .cell
       %div{ :class => "photo #{photo.orientation}" }
         = link_to (image_tag photo.image.url(:small)),
