added ajax functionality to galleries

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,8 +1,9 @@
 <% title "User #{@gallery.user_id}'s Gallery: #{@gallery.title.capitalize} (#{@gallery.shoot_date})" %>
+<% javascript "pagination" %>
 <%= "#{@gallery.photos.count} photos" %>
 
-<%= render :partial => 'admin' %>
+<%= render 'admin' %>
 
-<p class='pages'><%= will_paginate @photos %></p>
+<%= render 'photos' %>
 
-<%= render :partial => 'photos' %>
+
