updated the gallery pages to use ajax history through jquery bbq plugin

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,5 +1,5 @@
 <% title "User #{@gallery.user_id}'s Gallery: #{@gallery.title.capitalize} (#{@gallery.shoot_date})" %>
-<% javascript "pagination" %>
+<% javascript "jquery.ba-bbq", "pagination" %>
 <%= "#{@gallery.photos.count} photos" %>
 
 <%= render 'admin' %>
