--- a/app/views/galleries/_admin.html.erb
+++ b/app/views/galleries/_admin.html.erb
@@ -1,9 +1,11 @@
 <p class="admin">
-  <%= link_to "New Photo", new_gallery_photo_path(@gallery) %> |
-  <%= link_to "Edit Gallery", edit_gallery_path(@gallery) %> |
-  <%= link_to "Destroy Gallery", @gallery,
-    :confirm => 'Are you sure? This will destroy all images in this gallery.',
-    :method => :delete %> |
+  <%= link_to (image_tag 'icons/add.png', :class => 'button'),
+        new_gallery_photo_path(@gallery) %>
+  <%= link_to (image_tag 'icons/edit.png', :class => 'button'),
+        [:edit, @gallery] %>
+  <%= link_to (image_tag 'icons/delete.png', :class => 'button'), [@gallery],
+        :confirm => 'Are you sure? This will delete the entire gallery',
+        :method => :delete %> |
   <%= link_to "View All Galleries", galleries_path %><br />
   <%=h @gallery.description %>
 </p>
