--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,4 +1,4 @@
-<% title @gallery.title.humanize %>
+<% title @gallery.title.humanize%>
 
 <% javascript "jquery.ba-bbq", "pagination" %>
 <span class='control'>
@@ -10,9 +10,11 @@
         :confirm => 'Are you sure? This will delete the entire gallery!',
         :method => :delete %>
 </span>
-<h2><%= @gallery.user_id %></h2>
-<h3><%= @gallery.shoot_date %></h3>
-<%= "#{@gallery.photos.count} photos" %>
-<%=h @gallery.description %>
+<div class='right'>
+  <h2><%= @gallery.user_id %></h2>
+  <h3><%= @gallery.shoot_date %></h3>
+  <p><%= "#{@gallery.photos.count} photos" %></p>
+  <%=h @gallery.description %>
+</div>
 
 <%= render 'photos' %>
