--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,10 @@
       <div id="nav">
         <ul id="nav_list">
           <li><%= link_to "Home", root_url %></li>
+          <li><%= link_to "My Galleries", galleries_path %></li>
           <% for category in Category.all %>
           <li><%= link_to category.name.humanize, "/" + category.name %></li>
           <% end %>
-        </ul>
-      </div>
-
-      <div class="admin">
-        <ul id="nav_list">
-          <li>Administrator</li>
-          <li><%= link_to "Galleries", galleries_path %></li>
         </ul>
       </div>
 
