switched category photo to haml; thumbnails on category pages now display correctly, independent from gallery display pages;

--- a/public/stylesheets/image_gallery.css
+++ b/public/stylesheets/image_gallery.css
@@ -21,6 +21,9 @@
     display: block;
   }
 
+.photo.landscape img.sample {
+  margin: 25px auto;
+}
 .photo.landscape .control {
   float: right;
 }
