changed gallery attributes to better reflect their definitions

--- a/app/views/categories/_photos.html.haml
+++ b/app/views/categories/_photos.html.haml
@@ -8,4 +8,4 @@
     %ul
       - for gallery in @galleries
         %li
-          = link_to gallery.title, gallery
+          = link_to gallery.name, gallery
