--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -9,4 +9,4 @@
         = link_to (image_tag "icons/delete.png", :class => 'button'),
             [@gallery, photo], :confirm => 'Are you sure?', :method => :delete
       = link_to (image_tag photo.image.url(:small)),
-        photo.image.url, :rel => "lightbox[#{@gallery.title}]"
+        photo.image.url, :rel => "lightbox[#{@gallery.name}]"
