--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -10,4 +10,5 @@
         = link_to (image_tag "icons/delete.png", :class => 'button'), [gallery],
             :confirm => 'Are you sure? This will delete all included photos!',
             :method => :delete
-      = link_to (image_tag gallery.photos.first.image.url(:small)), [gallery]
+      - if gallery.nil?
+        = link_to (image_tag gallery.photos.first.image.url(:small)), [gallery]
