--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -4,9 +4,11 @@
     %div{ :class => "photo #{photo.orientation}"}
       .control
         = link_to (image_tag "icons/thumb_up.png", :class => 'button'), ""
-        = link_to (image_tag "icons/edit.png", :class => 'button'),
-            [:edit, @gallery, photo]
-        = link_to (image_tag "icons/delete.png", :class => 'button'),
-            [@gallery, photo], :confirm => 'Are you sure?', :method => :delete
+
+        - if admin_signed_in?
+          = link_to (image_tag "icons/edit.png", :class => 'button'),
+              [:edit, @gallery, photo]
+          = link_to (image_tag "icons/delete.png", :class => 'button'),
+              [@gallery, photo], :confirm => 'Are you sure?', :method => :delete
       = link_to (image_tag photo.image.url(:small)),
         photo.image.url, :rel => "lightbox[#{@gallery.name}]"
