--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -9,14 +9,16 @@
 </div>
 
 <h1><%= @gallery.name.humanize %></h1>
-<span class='control'>
-  <%= link_to (image_tag 'icons/add.png', :class => 'button'),
-          new_gallery_photo_path(@gallery) %>
-  <%= link_to (image_tag 'icons/edit.png', :class => 'button'),
-        [:edit, @gallery] %>
-  <%= link_to (image_tag 'icons/delete.png', :class => 'button'), [@gallery],
-        :confirm => 'Are you sure? This will delete the entire gallery!',
-        :method => :delete %>
-</span>
+<% if admin_signed_in? %>
+  <span class='control'>
+    <%= link_to (image_tag 'icons/add.png', :class => 'button'),
+            new_gallery_photo_path(@gallery) %>
+    <%= link_to (image_tag 'icons/edit.png', :class => 'button'),
+          [:edit, @gallery] %>
+    <%= link_to (image_tag 'icons/delete.png', :class => 'button'), [@gallery],
+          :confirm => 'Are you sure? This will delete the entire gallery!',
+          :method => :delete %>
+  </span>
+<% end %>
 
 <%= render 'photos' %>
