--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,11 @@
       <div id="nav">
         <ul id="nav_list">
           <li><%= link_to "Home", root_url %></li>
-          <li><%= link_to "My Galleries", galleries_path %></li>
+          <% if admin_signed_in? %>
+            <li><%= link_to "Galleries", galleries_path %></li>
+          <% else %>
+            <li><%= link_to "My Galleries", galleries_path %></li>
+          <% end %>
           <% for category in Category.all %>
           <li><%= link_to category.name.humanize, "/" + category.name %></li>
           <% end %>
