--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,9 +7,9 @@
   <% for category in @categories %>
     <tr>
       <td><%= category.name %></td>
-      <td><%= link_to "Show", category %></td>
-      <td><%= link_to "Edit", edit_category_path(category) %></td>
-      <td><%= link_to "Destroy", category, :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to "Show", [category] %></td>
+      <td><%= link_to "Edit", [:edit, category] %></td>
+      <td><%= link_to "Destroy", [category], :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
