--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -3,7 +3,9 @@
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
+    <%= f.check_box :public %> <%= f.label :public %>
   </p>
+
   <p>
     <%= f.label :owner_id %><br />
     <%= f.text_field :owner_id %>
