--- a/public/stylesheets/image_gallery.css
+++ b/public/stylesheets/image_gallery.css
@@ -1,7 +1,11 @@
-#photos {
+#photos, .photos {
   clear: both;
   margin: 0 auto 10px;
   text-align: center;
+}
+
+.galleries {
+  clear: both;
 }
 
 .photo {
@@ -22,7 +26,7 @@
     display: block;
   }
 
-.photo.landscape img.sample {
+.photo.landscape img.sample, .photo.landscape img.preview {
   margin: 25px auto;
 }
 .photo.landscape .control {
