--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -26,6 +26,12 @@
       <%= link_to "Add photos to gallery from: ",
         :action => 'extract', :id => @gallery.id %>
       <%= @gallery.archive.original_filename %><br />
+      <p class="instruction">
+        Note: This will <em>append</em> the photos to the current gallery
+        collection. You should <em>not</em> run this more than once with a single zip
+        file. This feature is still under development and will evolve as I&nbsp;
+        better understand your workflow.
+      </p>
     <% end %>
 
     <%= f.file_field :archive %>
