--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tag %>
     <%= stylesheet_link_tag 'application' %>
     <%= stylesheet_link_tag 'moments' %>
+    <%= stylesheet_link_tag 'form' %>
     <%= stylesheet_link_tag 'image_gallery' %>
     <%= stylesheet_link_tag 'lightbox' %>
     <%= javascript_include_tag :defaults %>
