not using delayed_job for extract or delete anymore

--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -24,7 +24,7 @@
     <% if @gallery.archive.file? %>
 
       <%= link_to "Add photos to gallery from: ",
-        :action => 'extract', :id => @gallery.id %>
+        [:extract, @gallery] %>
       <%= @gallery.archive.original_filename %><br />
       <p class="instruction">
         Note: This will <em>append</em> the photos to the current gallery
