moved the #photos divoutside of the _photos partial for ajax purposes(?)

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -20,5 +20,6 @@
           :method => :delete %>
   </span>
 <% end %>
-
-<%= render 'photos' %>
+<div id="photos">
+  <%= render 'photos' %>
+</div>
