--- a/app/views/permissions/_form.html.haml
+++ b/app/views/permissions/_form.html.haml
@@ -4,8 +4,8 @@
     = f.label :shared_user_id, "Share with: "
     %br
     - if @permission.created_at.nil?
-      = f.select :shared_user_id,
-        (User.all - @gallery.shared_users).collect { |u| [ u.email, u.id ] }
+      - sharable_users = User.all - (@gallery.shared_users << current_user)
+      = f.select :shared_user_id, sharable_users.collect {|u| [ u.email, u.id ]}
     - else
       = @permission.shared_user.email
 
