created new methods for finding user permissions on specific galleries; permissions for view and share appear to be working, but non-user access to non-theatre galleries are giving a double-render-error with authenticate_viewers!

--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -11,8 +11,13 @@
       #photos
         = render :partial => 'gallery', :collection => category.galleries
 - elsif user_signed_in?
-  %h2.galleries My Galleries
-  #photos
-    = render :partial => 'gallery', :collection => @owned_galleries
+  - unless current_user.owned_galleries.empty?
+    %h2.galleries My Galleries
+    #photos
+      = render :partial => 'gallery', :collection => @owned_galleries
+  - unless current_user.shared_galleries.empty?
+    %h2.galleries Shared Galleries
+    #photos
+      = render :partial => 'gallery', :collection => @shared_galleries
 - else
   Currently not enabled.
