--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Recently added galleries:</h1>
-<ul>
-  <% for gallery in Gallery.find(:all, :order => :updated_at, :limit => 10) %>
-  <li><%= link_to gallery.name, gallery %>:
-    <%= gallery.photos.count %> photos
-    updated <%= gallery.updated_at.to_s(:rfc822) %></li>
-  <% end %>
-</ul>
+<% if user_signed_in? || admin_signed_in? %>
+  <h1>Recently added galleries:</h1>
+  <ul>
+    <% for gallery in Gallery.find(:all, :order => :updated_at, :limit => 10) %>
+    <li><%= link_to gallery.name, gallery %>:
+      <%= gallery.photos.count %> photos
+      updated <%= gallery.updated_at.to_s(:rfc822) %></li>
+    <% end %>
+  </ul>
+<% end %>
