--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,17 +1,17 @@
 - title "Galleries", false
-- if admin_signed_in?
+- if user_signed_in? && current_user.admin?
   = link_to (image_tag 'icons/add.png', :class => 'button'), new_gallery_path
 
-- if user_signed_in?
-  %h2.galleries My Galleries
-  #photos
-    = render :partial => 'gallery', :collection => @owned_galleries
-- elsif admin_signed_in?
+- if user_signed_in? && current_user.admin?
   - for category in Category.all
     - unless category.galleries.empty?
       %h2.galleries
         = "#{category.name.titleize} Galleries"
       #photos
         = render :partial => 'gallery', :collection => category.galleries
+- elsif user_signed_in?
+  %h2.galleries My Galleries
+  #photos
+    = render :partial => 'gallery', :collection => @owned_galleries
 - else
   Currently not enabled.
