--- a/app/views/galleries/_gallery.html.haml
+++ b/app/views/galleries/_gallery.html.haml
@@ -1,11 +1,14 @@
 %div{ :class => "photo #{gallery.photos.first.orientation unless gallery.photos.empty?}"}
   .control
-    - if admin_signed_in?
+    - if user_signed_in? && current_user.admin?
       = link_to (image_tag "icons/edit.png", :class => 'button'),
           [:edit, gallery]
       = link_to (image_tag "icons/delete.png", :class => 'button'), [gallery],
           :confirm => 'Are you sure? This will delete all included photos!',
           :method => :delete
   - unless gallery.nil?
-    = link_to (image_tag gallery.photos.first.image.url(:small),
-               :class => 'preview'), [gallery]
+    - unless gallery.photos.first.nil?
+      = link_to (image_tag gallery.photos.first.image.url(:small),
+                 :class => 'preview'), [gallery]
+    -else
+      = link_to (image_tag "missing.png", :class => 'preview'), [gallery]
