--- a/app/views/galleries/index.html.haml
+++ b/app/views/galleries/index.html.haml
@@ -1,6 +1,7 @@
 - title "Galleries", false
 - if admin_signed_in?
-  = link_to (image_tag 'icons/add.png', :class => 'button'), new_gallery_path
+  %h2
+    = link_to (image_tag 'icons/add.png') + " New Gallery", new_gallery_path
 
 
 - if admin_signed_in?
