--- a/public/stylesheets/moments.css
+++ b/public/stylesheets/moments.css
@@ -5,8 +5,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #213849; /* #213849 */
-	background-image: -moz-linear-gradient(100% 100% 90deg, #466E8F, #213849);
+  background-color: #545454; /* #213849 */
+	background-image: -moz-linear-gradient(100% 100% 90deg, #2b2b2b, #666666);
   font-size: 0.7em;
 }
 	body.admin {
@@ -30,6 +30,11 @@ a:hover {
   margin: 0 auto;
   padding: 0;
   border: none;
+
+	-moz-box-shadow: 0px -40px 40px #000;
+	-webkit-box-shadow: 0px -40px 40px #000;
+	box-shadow: 0px -40px 40px #000;
+
 }
 
 #header {
