--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -2,12 +2,10 @@
 - for photo in @photos
   %div{ :class => "photo #{photo.orientation}"}
     .control
-      = link_to (image_tag "icons/thumb_up.png", :class => 'button'), ""
+      = like_button_for
 
       - if admin_signed_in?
-        = link_to (image_tag "icons/edit.png", :class => 'button'),
-            [:edit, @gallery, photo]
-        = link_to (image_tag "icons/delete.png", :class => 'button'),
-            [@gallery, photo], :confirm => 'Are you sure?', :method => :delete
+        = edit_button_for @gallery, photo
+        = delete_button_for @gallery, photo
     = link_to (image_tag photo.image.url(:small)),
         photo.image.url, :rel => "lightbox[#{@gallery.name}]"
