reworked api and functionality for function_button_for methods and their calls in the views

--- a/app/views/galleries/_gallery.html.haml
+++ b/app/views/galleries/_gallery.html.haml
@@ -1,11 +1,9 @@
 %div{ :class => "photo #{gallery.photos.first.orientation unless gallery.photos.empty?}"}
   .control
     - if admin_signed_in?
-      = link_to (image_tag "icons/edit.png", :class => 'button'),
-          [:edit, gallery]
-      = link_to (image_tag "icons/delete.png", :class => 'button'), [gallery],
-          :confirm => 'Are you sure? This will delete all included photos!',
-          :method => :delete
+      = edit_button_for gallery
+      = delete_button_for gallery, :confirm => "Are you sure? This will delete all included photos!"
+
   - unless gallery.nil?
     - unless gallery.photos.first.nil?
       = link_to (image_tag gallery.photos.first.image.url(:small),
