--- a/app/views/galleries/_photos.html.haml
+++ b/app/views/galleries/_photos.html.haml
@@ -2,10 +2,11 @@
 - for photo in @photos
   %div{ :class => "photo #{photo.orientation}"}
     .control
-      = like_button_for
+      = link_to (image_tag "icons/thumb_up.png", :class => 'button'), ""
 
       - if admin_signed_in?
         = edit_button_for @gallery, photo
-        = delete_button_for @gallery, photo
+        = delete_button_for @gallery, photo, :confirm => "Are you sure?"
+
     = link_to (image_tag photo.image.url(:small)),
         photo.image.url, :rel => "lightbox[#{@gallery.name}]"
