--- a/app/views/galleries/show.html.haml
+++ b/app/views/galleries/show.html.haml
@@ -17,11 +17,8 @@
   %span.control
     = link_to (image_tag 'icons/add.png', :class => 'button'),
         new_gallery_photo_path(@gallery)
-    = link_to (image_tag 'icons/edit.png', :class => 'button'),
-        [:edit, @gallery]
-    = link_to (image_tag 'icons/delete.png', :class => 'button'), [@gallery],
-        :confirm => 'Are you sure? This will delete the entire gallery!',
-        :method => :delete
+    = edit_button_for @gallery
+    = delete_button_for @gallery, :confirm => "Are you sure? This will delete the entire gallery!"
 
 #photos
   = render 'photos'
