--- a/public/stylesheets/image_gallery.css
+++ b/public/stylesheets/image_gallery.css
@@ -27,6 +27,11 @@
   top: 0;
   right: 0;
   }
+
+  /* if javascript is enabled, hide the control buttons on load. */
+  body.loaded .photo .control {
+    display: none;
+  }
   .photo.landscape .control .button {
     position: relative;
     top: 0;
