added buttons to order index and an alias to the delete/destroy_button_for helper methods

--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -7,7 +7,7 @@
     %tr
       %td= order.user_id
       %td= link_to 'Show', order
-      %td= link_to 'Edit', edit_order_path(order)
-      %td= link_to 'Destroy', order, :confirm => 'Are you sure?', :method => :delete
+      %td= edit_button_for order
+      %td= delete_button_for order, "Are you sure?"
 
 %p= link_to "New Order", new_order_path
