--- a/app/views/order_items/show.html.haml
+++ b/app/views/order_items/show.html.haml
@@ -8,8 +8,8 @@
   = @order_item.quantity
 
 %p
-  = link_to "Edit", edit_order_item_path(@order_item)
+  = edit_button_for @order, @order_item
   |
-  = link_to "Destroy", @order_item, :confirm => 'Are you sure?', :method => :delete
+  = delete_button_for @order, @order_item, "Are you sure?"
   |
   = link_to "View All", order_items_path
